# routes/api/auth.js
@@ -28,6 +28,48 @@ router.post('/sign-in', async(req, res) => {
     }
 });
 
+router.post('/update-device-token', async(req, res) => {
+    req.body.code = 'EN';
+    try {
+        if (req.body.user_id && req.body.device_token) {
+            let response = await authHandler.updateDeviceToken(req.body);
+            jsonResponse(res, responseCodes.OK, errors.noError(), response);
+        } else {
+            jsonResponse(res, responseCodes.BadRequest, errors.missingParameters(true, req.body.code), null);
+            return;
+        }
+    } catch (error) {
+        try {
+            jsonResponse(res, error.code, errors.formatErrorForWire(error), null);
+            return;
+        } catch (error) {
+            jsonResponse(res, responseCodes.InternalServer, errors.internalServer(true, req.body.code), null);
+            return;
+        }
+    }
+});
+
+router.post('/logout', async(req, res) => {
+    req.body.code = 'EN';
+    try {
+        if (req.body.user_id) {
+            let response = await authHandler.logout(req.body);
+            jsonResponse(res, responseCodes.OK, errors.noError(), response);
+        } else {
+            jsonResponse(res, responseCodes.BadRequest, errors.missingParameters(true, req.body.code), null);
+            return;
+        }
+    } catch (error) {
+        try {
+            jsonResponse(res, error.code, errors.formatErrorForWire(error), null);
+            return;
+        } catch (error) {
+            jsonResponse(res, responseCodes.InternalServer, errors.internalServer(true, req.body.code), null);
+            return;
+        }
+    }
+});
+
 router.get('/get-lottie-animation', async(req, res) => {
     req.query.code = 'EN';
     try {
